--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.5",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
@@ -51,6 +53,7 @@
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
     "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/react-chartjs-2": "^2.5.7",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13"
